--- a/ngc-learn-legacy-main/walkthroughs/walkthrough1/gncn_pdh/fit.cfg
+++ b/ngc-learn-legacy-main/walkthroughs/walkthrough1/gncn_pdh/fit.cfg
@@ -8,6 +8,8 @@ dev_xfname = ../data/mnist/validX.npy
 dev_yfname = ../data/mnist/validY.npy
 test_xfname = ../data/mnist/testX.npy
 test_yfname = ../data/mnist/testY.npy
+train_yfname =  ../data/mnist/trainY.npy
+model_fname =  ./gncn_pdh/model0.ngc
 # training meta-parameters
 num_iter = 100
 eta = 0.001
